# bashward

./: CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md
.github/workflows/: ci.yml
src/: main.rs
